--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" type="image/png" href="icons/favicon.png" />
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
+  <!-- Standard -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <!-- Per compatibilità con Safari iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="WA Sender" />
