--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 </head>
 <body>
   <div class="wa-header">
-    <div class="wa-logo">WA</div>
-    <h1 class="wa-title">Easy WhatsApp</h1>
+    <div class="wa-logo">DF</div>
+    <h1 class="wa-title">Easy_WhatsApp | By-DF</h1>
   </div>
 
   <div class="app-wrap">
