--- a/index.html
+++ b/index.html
@@ -157,6 +157,23 @@
       .install-banner { background: #0f1a14; border-color: #1f3c2b; }
       .ios-tip { background: #141516; border-color: #2a2c2d; }
     }
+	
+	.credit {
+	  position: fixed;
+	  bottom: 10px;
+	  right: 15px;
+	  font-size: 12px;
+	  color: rgba(0, 0, 0, 0.4); /* testo scuro semitrasparente */
+	  background: rgba(255, 255, 255, 0.3); /* sfondo chiaro trasparente */
+	  padding: 3px 6px;
+	  border-radius: 6px;
+	  z-index: 9999;
+	}
+	.credit:hover {
+	  color: rgba(0, 0, 0, 0.7);
+	  background: rgba(255, 255, 255, 0.6);
+	}
+
   </style>
 </head>
 <body>
@@ -281,5 +298,11 @@
       });
     })();
   </script>
+  
+  <div class="credit">
+  Made with ❤️ by DF.
+  </div>
+
+  
 </body>
 </html>
