--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Easy_WhatsApp | By-DF</title>
+  <title>Easy_WApp | By-DF</title>
 
   <!-- PWA -->
   <meta name="theme-color" content="#075E54" />
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" type="image/png" href="icons/favicon.png" />
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
-  <!-- Standard -->
+  <!-- Standard + iOS -->
   <meta name="mobile-web-app-capable" content="yes" />
-  <!-- Per compatibilità con Safari iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="WA Sender" />
@@ -32,9 +31,9 @@
       display: flex; flex-direction: column; min-height: 100vh;
     }
 
-    /* Header in stile WhatsApp */
+    /* Header stile WhatsApp */
     .wa-header {
-      background: linear-gradient(0deg,#075E54,#075E54);
+      background: #075E54;
       color: #fff;
       padding: 12px 16px;
       display: flex; align-items: center; gap: 10px;
@@ -44,7 +43,7 @@
     .wa-logo {
       width: 28px; height: 28px; display:inline-flex; align-items:center; justify-content:center;
       border-radius: 50%; background:#25D366; font-weight: 700;
-      color:#fff; font-size: 18px;
+      color:#fff; font-size: 16px;
     }
     .wa-title { margin: 0; font-size: 18px; font-weight: 600; }
 
@@ -65,22 +64,17 @@
       border: 1px solid rgba(0,0,0,.04);
     }
 
-    /* Titolo sezione */
     .section-title {
-      display:flex; align-items:center; gap:8px;
       margin: 0 0 10px 0; font-size: 18px; color:#075E54; font-weight:700;
+      display:flex; align-items:center; gap:8px;
     }
 
     /* Form */
-    .form-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 12px;
-    }
+    .form-grid { display: grid; grid-template-columns: 1fr; gap: 12px; }
 
     .row-2 {
       display: grid;
-      grid-template-columns: 1fr 2fr;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
       gap: 10px;
     }
 
@@ -96,8 +90,7 @@
     }
     input::placeholder, textarea::placeholder { color:#9aa5ac; }
     textarea { resize: vertical; min-height: 110px; }
-
-    .flag-option { font-size: 16px; } /* per emoji in <option> */
+    .flag-option { font-size: 16px; } /* per emoji */
 
     .primary-btn {
       background: #25D366; color: #fff; border: none; font-weight: 700;
@@ -141,11 +134,22 @@
     }
     .ios-tip.show { display: block; }
 
-    /* Responsive migliorato */
-    @media (min-width: 640px) {
-      .app-card { padding: 20px; }
-      .row-2 { grid-template-columns: 1.2fr 2fr; gap: 12px; }
+    /* Credit minimal */
+    .credit {
+      position: fixed;
+      bottom: 10px;
+      right: 15px;
+      font-size: 12px;
+      color: rgba(0, 0, 0, 0.4);
+      background: rgba(255, 255, 255, 0.3);
+      padding: 3px 6px;
+      border-radius: 6px;
+      z-index: 9999;
     }
+    .credit:hover { color: rgba(0,0,0,0.7); background: rgba(255,255,255,0.6); }
+
+    /* Responsive */
+    @media (min-width: 640px) { .app-card { padding: 20px; } }
 
     /* Dark mode */
     @media (prefers-color-scheme: dark) {
@@ -156,30 +160,14 @@
       .error { background:#3b0b0b; color:#ffd6d6; border-color:#6b1b1b; }
       .install-banner { background: #0f1a14; border-color: #1f3c2b; }
       .ios-tip { background: #141516; border-color: #2a2c2d; }
+      .credit { color: rgba(255,255,255,0.45); background: rgba(255,255,255,0.08); }
     }
-	
-	.credit {
-	  position: fixed;
-	  bottom: 10px;
-	  right: 15px;
-	  font-size: 12px;
-	  color: rgba(0, 0, 0, 0.4); /* testo scuro semitrasparente */
-	  background: rgba(255, 255, 255, 0.3); /* sfondo chiaro trasparente */
-	  padding: 3px 6px;
-	  border-radius: 6px;
-	  z-index: 9999;
-	}
-	.credit:hover {
-	  color: rgba(0, 0, 0, 0.7);
-	  background: rgba(255, 255, 255, 0.6);
-	}
-
   </style>
 </head>
 <body>
   <div class="wa-header">
     <div class="wa-logo">DF</div>
-    <h1 class="wa-title">Easy_WhatsApp | By-DF</h1>
+    <h1 class="wa-title">Easy_WApp | By-DF</h1>
   </div>
 
   <div class="app-wrap">
@@ -221,13 +209,35 @@
 
             <div v-if="selectedPrefix === 'custom'">
               <label for="manualPrefix">Prefisso personalizzato (solo numeri, senza +)</label>
-              <input id="manualPrefix" v-model="manualPrefix" @input="digitsOnly('manualPrefix')" placeholder="es. 212 (Marocco)" />
+              <input
+                id="manualPrefix"
+                v-model="manualPrefix"
+                @input="digitsOnly('manualPrefix')"
+                placeholder="es. 212 (Marocco)"
+              />
             </div>
+          </div>
 
-            <div v-else>
-              <label for="phone">Numero (senza prefisso)</label>
-              <input id="phone" type="tel" v-model="phone" inputmode="numeric" placeholder="es. 3491234567" @input="digitsOnly('phone')" />
-            </div>
+          <div>
+            <label for="phone">
+              {{ (selectedPrefix === 'custom' && !manualPrefix)
+                  ? 'Numero (internazionale COMPLETO con prefisso)'
+                  : 'Numero (senza prefisso)' }}
+            </label>
+            <input
+              id="phone"
+              type="tel"
+              v-model="phone"
+              inputmode="numeric"
+              :placeholder="(selectedPrefix === 'custom' && !manualPrefix)
+                  ? 'es. +212612345678 (numero completo con prefisso)'
+                  : 'es. 3491234567 (senza prefisso)'"
+              @input="digitsOnly('phone')"
+              :aria-describedby="(selectedPrefix === 'custom' && !manualPrefix) ? 'intlHelp' : null"
+            />
+            <small v-if="selectedPrefix === 'custom' && !manualPrefix" id="intlHelp" style="color:#6b7280">
+              Inserisci il numero completo di prefisso (solo cifre, niente spazi).
+            </small>
           </div>
 
           <div>
@@ -267,9 +277,7 @@
       const isIOS = /iphone|ipad|ipod/i.test(navigator.userAgent);
       const isInStandalone = window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
 
-      if (isIOS && !isInStandalone) {
-        iosTip.classList.add('show');
-      }
+      if (isIOS && !isInStandalone) { iosTip.classList.add('show'); }
 
       let deferredPrompt = null;
 
@@ -298,11 +306,7 @@
       });
     })();
   </script>
-  
-  <div class="credit">
-  Made with ❤️ by DF
-  </div>
 
-  
+  <div class="credit">Made with ❤️ by DF</div>
 </body>
 </html>
